# lifelines

./: AUTHORS  ChangeLog  INSTALL  NEWS  configure.ac
.github/workflows/: codeql-analysis.yml
docs/editor/: Makefile.am
docs/man/: Makefile.am  llexec.1  llines.1
docs/manual/: Makefile.am  ll-python-api.texi  ll-python-internals.texi
po/: da.po  de.po  el.po  eo.po  es.po  fr.po  it.po  nl.po  pl.po  rw.po  sv.po
src/: Makefile.am
src/arch/: Makefile.am
src/arch/mswin/: Makefile.am
src/btree/: Makefile.am
src/gedlib/: Makefile.am  charmaps.c  charprops.c  datei.c  datei.h  dateprint.c  dbcontext.c  dblist.c  editmap.c  editvtab.c  gstrings.c  init.c  leaks.c  leaksi.h  lldatabase.c  lloptions.c  messages.c  node.c  nodeio.c  remove.c  valid.c
src/hdrs/: Makefile.am  date.h  gedcom.h  gedcom_macros.h  liflines.h  llpy-externs.h  llstdlib.h  loadsave.h  messages.h  mychar.h  screen.h  standard.h  ui.h  uiio.h
src/hdrs/mswin/: Makefile.am
src/interp/: Makefile.am  builtin.c  interp.c  more.c  rassa.c  rptui.c  rptui.h  yacc.y
src/liflines/: Makefile.am  add.c  ask.c  askgedc.c  askprogram.c  browse.c  brwsmenu.c  choose.c  cscurses.c  delete.c  dynmenu.c  edit.c  export.c  import.c  interact.c  lbrowse.c  lines_usage.c  listui.c  llexec.c  llinesi.h  loadsave.c  main.c  menuset.c  merge.c  miscutls.c  newrecs.c  pedigree.c  scan.c  screen.c  searchui.c  selectdb.c  show.c  swap.c  tandem.c  valgdcom.c  wprintf.c
src/python/: Makefile.am  c-to-python.c  database.c  database.h  event.c  event.h  family.c  family.h  iter.c  nodes.c  other.c  person.c  person.h  python-to-c.c  python-to-c.h  records.c  run.c  set.c  set.h  source.c  types.c  types.h  user.c
src/stdlib/: Makefile.am  llabort.c  proptbls.c  signals.c  stdstrng.c  strutf8.c  version.c
src/tools/: Makefile.am  btedit.c  dbverify.c  lldump.c  lltest.c
src/ui/: Makefile.am  curses-ui.c  print.c  stdio-ui.c  ui_cli.c  uiioi.h
